--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "my-app",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "build-js": "watchify client/app.js -o public/js/build.js",
+    "build-js-min": "browserify -g uglifyify client/app.js > public/js/build.min.js",
+    "start": "nodemon app.js",
+    "develop": "npm run build-js",
+    "create": "node ./server/modules/generator.js 1",
+    "destroy": "node ./server/modules/generator.js 2",
+    "builds": "webpack --watch --config webpack.config.js",
+    "postinstall": "npm rebuild node-sass"
   },
   "private": true,
   "dependencies": {
@@ -18,8 +21,11 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "bootstrap": "^5.2.3",
+    "nodemon": "^2.0.20",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "update": "^0.7.4",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
