--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "bluebird": "^3.7.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
+    "primeicons": "^6.0.1",
+    "primeng": "^15.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "update": "^0.7.4",
+    "updates": "^13.2.7",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
